--- a/assets/css/tablet.css
+++ b/assets/css/tablet.css
@@ -1,6 +1,7 @@
 .container {
 height: fit-content;
 margin-top: 5%;
+width: 100%;
 }
 
 .book {
